FEAT (LangChain Fundamentals): Composability and LCEL

--- a/src/notebooks/langchain_fundamentals.ipynb
+++ b/src/notebooks/langchain_fundamentals.ipynb
@@ -304,7 +304,7 @@
    "source": [
     "## Practical LCEL — Piping Components Together for Inputs and Outputs\n",
     "\n",
-    "In the first lesson, the chain was simple:  \n",
+    "In the previous section, the chain was simple:  \n",
     "one input variable → one prompt → one output.\n",
     "\n",
     "Real-world applications are rarely that simple.\n",
